# Cpp-homeworks

./: README.md
hw_01/: Makefile
hw_01/include/: bmp.h
hw_01/src/: bmp.c  main.c
hw_02/: CMakeLists.txt  main.cpp
hw_02/include/: Board.hpp  BoardTest.hpp  BoardView.hpp  GameController.hpp  NcursesBoardView.hpp  StdioBoardView.hpp  Test.hpp
hw_02/src/: Board.cpp  GameController.cpp  NcursesBoardView.cpp  StdioBoardView.cpp
hw_02/test/: BoardTest.cpp  Test.cpp
hw_03/: CMakeLists.txt  README.md
hw_03/include/: CLI.hpp  HuffmanArchiver.hpp
hw_03/src/: BitStream.cpp  CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  main.cpp
hw_03/test/: TestBitStream.cpp  TestCLI.cpp  TestHuffman.cpp  TestHuffmanArchiver.cpp
lab_01/correct/: Makefile
lab_01/correct/include/: algorithm.h  io.h
lab_01/correct/src/: algorithm.c  main.c  util.c
lab_01/multiple/include/: algorithm.h
lab_01/multiple/src/: algorithm.c  io.c  main.c  util.c
lab_01/unresolved/: Makefile
lab_01/unresolved/include/: util.h
lab_01/unresolved/src/: algorithm.c
lab_02/: Makefile
lab_02/include/: str.h  test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/: Makefile
lab_03/include/: clist.h
lab_03/src/: clist.c  main.c
lab_04/: Makefile
lab_04/include/: mergesort.h
lab_04/src/: main.c  mergesort.c
lab_05/: Makefile  out.txt  test.txt
lab_05/include/: clist.h  point_list.h
lab_05/src/: clist.c  main.c  point_list.c
lab_09/: Makefile
lab_09/include/: matrix.hpp  shared_ptr.hpp
lab_09/src/: main.cpp  matrix.cpp  shared_ptr.cpp
lab_10/: Makefile
lab_10/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab_10/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp  main.cpp
lab_11/include/: Developer.hpp  Employee.hpp  EmployeesArray.hpp  SalesManager.hpp  bin_manip.hpp
lab_11/src/: Developer.cpp  Employee.cpp  EmployeesArray.cpp  SalesManager.cpp  bin_manip.cpp  main.cpp
lab_12/: CMakeLists.txt
lab_12/include/: my_vector.h  my_vector_impl.h
lab_12/src/: main.cpp
lab_13/: CMakeLists.txt
lab_13/include/: my_array.h
lab_13/src/: main.cpp
lab_14/: CMakeLists.txt
lab_14/include/: matrix.hpp
lab_14/src/: main.cpp  matrix.cpp
